Archive the last 1.20.1 Forge WIP: Tectonic height, Better Sparse Structures, and TACZ extras.
Co-authored-by: Cursor <cursoragent@cursor.com>